--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.19.1",
-    "nodemailer": "^7.0.9"
+    "mongoose": "^8.19.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
