--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.1",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
